Copiato il codice JS vecchio e modificato il prompt in value

--- a/index.html
+++ b/index.html
@@ -54,10 +54,20 @@
         </div>
 
         <!-- parte di output -->
-        <div class="row">
-            <div class="col">
-               
+        <div>
+            <div class="row">
+                <div class="col">
+                <h1>IL TUO BIGLIETTO</h1>
+                </div>
             </div>
+
+            <div class="row">
+                <div class="col">
+                    <span>Costo biglietto</span>
+                    <span class="price"></span>
+                </div>
+            </div>
+            
         </div>
 
     </div>
