Creazione dell'EventListener sul click del bottone

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
                     </form>
 
-                    <button>Genera</button>
+                    <button class="genera">Genera</button>
 
                 </div>
                
