ESERCIZIO TERMINATO senza layout - aggiunto la visualizzazione del biglietto on click + annidato le variabili nello scope

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
 
         <!-- parte di output -->
-        <div>
+        <div class="output_ticket">
             <div class="row">
                 <div class="col">
                 <h1>IL TUO BIGLIETTO</h1>
