--- a/index.html
+++ b/index.html
@@ -28,25 +28,26 @@
                     <form class="flex" action="#">
                         <!-- nome e cognome -->
                         <div>
-                            <label for="user_name">Nome Cognome</label><br>
+                            <label for="user_name">Nome Cognome</label>
                             <input type="text" id="user_name" name="user_name">
                         </div>
 
                         <!-- km da percorrere -->
                         <div>
-                            <label for="km">Km da percorrere</label><br>
+                            <label for="km">Km da percorrere</label>
                             <input type="number" id="km" name="km" min="0">
                         </div>
 
                         <!-- età -->
                         <div>
-                            <label for="age">Inserisci la tua età</label><br>
+                            <label for="age">Inserisci la tua età</label>
                             <input type="number" id="age" name="age" min="0">
                         </div>
 
                     </form>
 
                     <button class="genera">Genera</button>
+                    <button class="genera">Annulla</button>
 
                 </div>
                
@@ -57,7 +58,7 @@
         <div class="output_ticket">
             <div class="row">
                 <div class="col">
-                <h1>IL TUO BIGLIETTO</h1>
+                <h2>IL TUO BIGLIETTO</h2>
                 </div>
             </div>
 
