Finito custum biglietto

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 <body>
-
+<section id="ticket_to_ride">
     <div class="container">
         <!-- TITOLO -->
         <div class="row">
@@ -56,16 +56,46 @@
 
         <!-- parte di output -->
         <div class="output_ticket">
+            <!-- titolo -->
             <div class="row">
                 <div class="col">
                 <h2>IL TUO BIGLIETTO</h2>
                 </div>
             </div>
 
+            <!-- dettagli del passegiero -->
             <div class="row">
                 <div class="col">
-                    <span>Costo biglietto</span>
-                    <span class="price"></span>
+                    <div class="ticket">
+                        <!-- titolo -->
+                        <div>
+                            <h3>DETTAGLIO PASSEGGERI</h3>
+                        </div>
+
+                        <!-- contenitore -->
+                        <div>
+                            <table>
+
+                                <tr>
+                                  <th class="user_name">NOME PASSEGERO</th>
+                                  <th>Offerta</th>
+                                  <th>Carrozza</th>
+                                  <th>Codice CP</th>
+                                  <th>Costo Biglietto</th>
+                                </tr>
+
+                                <tr>
+                                  <td class="user_name">Alfreds Futterkiste</td>
+                                  <td>Maria Anders</td>
+                                  <td>Germany</td>
+                                  <td>Germany</td>
+                                  <td class="price"></td>
+                                </tr>
+                           
+                              </table>
+
+                        </div>
+                    </div>
                 </div>
             </div>
             
@@ -73,7 +103,7 @@
 
     </div>
 
-
+</section>
 
        <!-- codice JavaScript -->
        <script type="text/javascript" src="js/main.js"></script> 
