Inserimento nel biglietto di nome + offerta

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                                 </tr>
 
                                 <tr>
-                                  <td class="user_name">Alfreds Futterkiste</td>
-                                  <td>Maria Anders</td>
+                                  <td id="input_name" class="user_name">Alfreds Futterkiste</td>
+                                  <td id="offerta">Maria Anders</td>
                                   <td>Germany</td>
                                   <td>Germany</td>
                                   <td class="price"></td>
