--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                                 </tr>
 
                                 <tr>
-                                  <td id="input_name" class="user_name">Alfreds Futterkiste</td>
-                                  <td id="offerta">Maria Anders</td>
-                                  <td>Germany</td>
-                                  <td>Germany</td>
+                                  <td id="input_name" class="user_name"></td>
+                                  <td id="offerta"></td>
+                                  <td id="carrozza"></td>
+                                  <td id="codice_cp"></td>
                                   <td class="price"></td>
                                 </tr>
                            
