ESERCIZIO TERMINATO - aggiunto anche il click su "Annulla"

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </form>
 
                     <button class="genera">Genera</button>
-                    <button class="genera">Annulla</button>
+                    <button class="pulisci">Annulla</button>
 
                 </div>
                
